--- a/views/matchViews/highlights.html
+++ b/views/matchViews/highlights.html
@@ -1,3 +1,3 @@
-<div class="holds-the-iframe" style="background:url(loading.png) center center no-repeat;">
+<div class="holds-the-iframe" style="background:url(assets/loading.png) center center no-repeat;">
     <iframe class="panel-body" ng-src="{{match.highlights | trusted}}" width="560" height="315" style="border:none; overflow:hidden; display:block; margin:0 auto" scrolling="no" frameborder="0" allowtransparency="true" allowfullscreen="true"></iframe>
 </div>
