--- a/views/stats.html
+++ b/views/stats.html
@@ -1,5 +1,5 @@
 <div class="row center-block">
-    <button class="btn col-md-2" ng-click="orderByField='appearances'; reverseSort = !reverseSort">
+    <button class="btn col-md-2 col-xs-2" ng-click="orderByField='appearances'; reverseSort = !reverseSort">
         Appearances <span ng-show="orderByField == 'appearances'">
             <span class="caret" ng-show="!reverseSort"></span>
             <span class="dropup">
@@ -8,7 +8,7 @@
         </span>
     </button>
 
-    <button class="btn col-md-2 col-md-offset-1" ng-click="orderByField='goals'; reverseSort = !reverseSort">
+    <button class="btn col-md-2 col-md-offset-1 col-xs-2 col-xs-offset-1" ng-click="orderByField='goals'; reverseSort = !reverseSort">
         Goals <span ng-show="orderByField == 'goals'">
             <span class="caret" ng-show="!reverseSort"></span>
             <span class="dropup">
@@ -17,7 +17,7 @@
         </span>
     </button>
 
-    <button class="btn col-md-2 col-md-offset-1" ng-click="orderByField='motm'; reverseSort = !reverseSort">
+    <button class="btn col-md-2 col-md-offset-1 col-xs-2 col-xs-offset-1" ng-click="orderByField='motm'; reverseSort = !reverseSort">
         MOTMs <span ng-show="orderByField == 'motm'">
             <span class="caret" ng-show="!reverseSort"></span>
             <span class="dropup">
@@ -30,7 +30,7 @@
 </br>
 
 <div class="row">
-    <div class="col-md-4"
+    <div class="col-md-4 col-xs-12"
          data-ng-repeat="player in players|orderBy:orderByField:reverseSort">
         <div class="panel-group">
             <div class="panel panel-primary">
